--- a/src/style.css
+++ b/src/style.css
@@ -319,6 +319,23 @@ a:focus {
   margin-bottom: var(--spacing-8);
 }
 
+.navbar-item {
+  box-shadow:none !important;
+  margin-top: 3em !important;
+}
+
+.navbar-start {
+  margin-right: 0;
+}
+.navbar-start a {
+  padding: 10px 25px;
+  font-size: 17px;
+  font-weight: 500;
+}
+.navbar-start a:last-child {
+  padding-right: 0;
+}
+
 /* Media queries */
 
 @media (max-width: 42rem) {
