--- a/src/style.css
+++ b/src/style.css
@@ -321,12 +321,15 @@ a:focus {
 
 .navbar-item {
   box-shadow:none !important;
-  margin-top: 3em !important;
+  display: flex;
+  align-items: center;
+  padding: var(--spacing-2) var(--spacing-4);
 }
 
 .navbar-start {
   margin-right: 0;
 }
+
 .navbar-start a {
   padding: 10px 25px;
   font-size: 17px;
@@ -334,6 +337,35 @@ a:focus {
 }
 .navbar-start a:last-child {
   padding-right: 0;
+}
+
+.navbar-container {
+  flex: 1;
+  /* align-content: center; */
+  justify-content: flex-end;
+  align-items: center;
+  /* background-color: aqua; */
+}
+
+.title-header {
+  font-family: var(--font-heading);
+  font-weight: var(--fontWeight-black);
+  font-size: var(--fontSize-6);
+  padding-left: var(--spacing-8);
+  color: var(--color-heading-black);
+}
+
+.navbar-header a {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+.horz-container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* background-color: red; */
 }
 
 /* Media queries */
