--- a/src/style.css
+++ b/src/style.css
@@ -341,30 +341,36 @@ a:focus {
 
 .navbar-container {
   flex: 1;
-  /* align-content: center; */
   justify-content: flex-end;
   align-items: center;
+  flex-wrap: wrap;
+  flex-shrink: 1;
   /* background-color: aqua; */
 }
 
 .title-header {
   font-family: var(--font-heading);
   font-weight: var(--fontWeight-black);
-  font-size: var(--fontSize-6);
   padding-left: var(--spacing-8);
   color: var(--color-heading-black);
+  display: flex;
+  flex-grow: 0;
 }
 
 .navbar-header a {
   flex: 1;
   display: flex;
-  justify-content: center;
+  font-size: 3.5vh;
 }
+
 .horz-container {
   flex: 1;
   display: flex;
+  flex-grow: 3;
+  flex-wrap: wrap;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  flex-basis: 50vh;
   /* background-color: red; */
 }
 
